[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/daily/night_end.gd" id="1"]

[node name="NightEnd" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0705882, 0.0705882, 0.117647, 1)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
offset_left = 260.0
offset_top = 70.0
offset_right = 1020.0
offset_bottom = 650.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SummaryLabel" type="RichTextLabel" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="ChoiceContainer" type="VBoxContainer" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="AutoTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

