extends Control

@onready var summary_label: RichTextLabel = %SummaryLabel
@onready var choice_container: VBoxContainer = %ChoiceContainer
@onready var auto_timer: Timer = %AutoTimer


func _ready() -> void:
	auto_timer.timeout.connect(_on_auto_timer_timeout)
	_render_summary()

	if CalendarManager.current_day == 7 and not EventFlags.get_flag("ch1_day7_choice_done"):
		_show_day7_choices()
		return

	auto_timer.start()


func _render_summary() -> void:
	var summary = GameManager.consume_daily_summary()
	var lines: Array[String] = []
	lines.append("Day %d çµ‚äº†" % CalendarManager.current_day)
	lines.append("")
	lines.append("æŠ€è¡“ â˜…%d" % PlayerData.get_stat_stars("technique"))
	lines.append("æ„Ÿè¦š â˜…%d" % PlayerData.get_stat_stars("sense"))
	lines.append("åº¦èƒ¸ â˜…%d" % PlayerData.get_stat_stars("guts"))
	lines.append("é­…åŠ› â˜…%d" % PlayerData.get_stat_stars("charm"))
	lines.append("æ´žå¯Ÿ â˜…%d" % PlayerData.get_stat_stars("insight"))
	lines.append("")
	lines.append("ðŸ’° æ‰€æŒé‡‘: %då†† (%+d)" % [PlayerData.money, int(summary.get("money", 0))])

	var flavors: Array = summary.get("flavors", [])
	if flavors.size() > 0:
		var flavor_lines: Array[String] = []
		for flavor in flavors:
			flavor_lines.append("%s %+d" % [str(flavor.get("name", "ãƒ•ãƒ¬ãƒ¼ãƒãƒ¼")), int(flavor.get("amount", 0))])
		lines.append("ðŸ“¦ " + ", ".join(flavor_lines))

	lines.append("å¤§ä¼šã¾ã§ã‚ã¨ %d æ—¥" % CalendarManager.get_remaining_days())
	if CalendarManager.current_day == 7:
		lines.append("æ˜Žæ—¥ã¯ã„ã‚ˆã„ã‚ˆå¤§ä¼šã â€¦")

	summary_label.text = "\n".join(lines)


func _show_day7_choices() -> void:
	var button1 = Button.new()
	button1.text = "æ·±å‘¼å¸ã—ã¦å¯ã‚‹ï¼ˆåº¦èƒ¸+3ï¼‰"
	button1.pressed.connect(_on_day7_choice.bind("guts"))
	choice_container.add_child(button1)

	var button2 = Button.new()
	button2.text = "ãƒŽãƒ¼ãƒˆã‚’è¦‹è¿”ã™ï¼ˆæ´žå¯Ÿ+3ï¼‰"
	button2.pressed.connect(_on_day7_choice.bind("insight"))
	choice_container.add_child(button2)


func _on_day7_choice(stat_name: String) -> void:
	for child in choice_container.get_children():
		child.queue_free()
	PlayerData.add_stat(stat_name, 3)
	GameManager.log_stat_change(stat_name, 3)
	EventFlags.set_flag("ch1_day7_choice_done")
	auto_timer.start()


func _on_auto_timer_timeout() -> void:
	CalendarManager.advance_time()
	if CalendarManager.current_day >= CalendarManager.tournament_day:
		GameManager.transition_to_tournament()
	get_tree().change_scene_to_file("res://scenes/daily/morning_phone.tscn")
